--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server --watch src/jobs.json --port 4000"
+    "server": "json-server src/jobs.json --port 4000"
   },
   "dependencies": {
     "react": "^19.2.0",
